# song-lyrics-sentiment-analysis

./: README.md  requirements.txt
nlp-pipeline/: bert.py
scraper_cpp/: CMakeLists.txt  artist.txt  getlyrics.cpp  getlyrics.hpp  main.cpp
scraper_cpp/.cache/clangd/index/: 10-at-a-time.c.6139463D4FF7AA48.idx  abi_macros.hpp.C2D0B71B404A9D40.idx  address-scope.c.366E76E2A3956896.idx  adl_serializer.hpp.C0C7D25CEA1ED2DE.idx  altsvc.c.2232CCDB594A74C6.idx  altsvc.c.67B99189C397A21E.idx  altsvc.h.B49C0D46C4191832.idx  amigaos.c.C34AA4A3AF425C2E.idx  amigaos.h.E03451CBCBDD1639.idx  anyauthput.c.B9368F1D4531B804.idx  arpa_telnet.h.03E1BE211A80034B.idx  asyn-ares.c.8C3990A11CC429AC.idx  asyn-base.c.A63286F2C8B877FF.idx  asyn-thrdd.c.D5A72D6B70348CE2.idx  asyn.h.69DC3A4252ABA13F.idx  base64.c.357EE1F71607CBE6.idx  bearssl.c.BE9A5BBA621F0BBF.idx  bearssl.h.BDEBACC3B03CFE3D.idx  begin.hpp.32E80453CD054314.idx  binary_reader.hpp.C8ECFD63CA83A552.idx  binary_writer.hpp.F094444912F3CAB5.idx  block_ip.c.96F440DC42BBD481.idx  bufq.c.F6D34910FA7BA361.idx  bufq.h.9FFB6FF09E2D023E.idx  bufref.c.6F13B1876E8F44D9.idx  bufref.h.2670C689E8683828.idx  byte_container_with_subtype.hpp.027D2967060BCB4D.idx  certinfo.c.D04D0B1BD1332B92.idx  cf-h1-proxy.c.241DADD1E0B4978F.idx  cf-h1-proxy.h.A641827505CAB79B.idx  cf-h2-proxy.c.13EEC1FA5C600DB6.idx  cf-h2-proxy.h.6F21D212A90C6D9D.idx  cf-haproxy.c.FA294EC7FBF36E4F.idx  cf-haproxy.h.024B5C0D1F1E1932.idx  cf-https-connect.c.28CE9F58AD1EA42B.idx  cf-https-connect.h.99A301C44025F793.idx  cf-socket.c.F798745595B287CE.idx  cf-socket.h.CDF4070A3004A37C.idx  (+469 more)
(+1 files in other folders)
